# self-healing-agentic-workflows

./: DISCLAIMER.md  Makefile  PLAN.md  README.md  SPEC.md  TASKS.md  pyproject.toml
memory/: constitution.md
src/shaw/: cli.py  evidence.py  loader.py  runner.py
tests/: test_shaw_cli.py
tests/fixtures/: workflow.yaml
workflows/: example.yaml
